# agentledger

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_prds.py  0003_roadmap_mcp.py  0004_platform.py  0005_apikey_project.py  0006_idempotency.py  0007_request_context.py  0008_attachments_spam_github.py  0009_item_claiming.py  0010_item_touchpoints.py  0011_item_prd_link.py  0012_sync_state.py  0013_code_graph.py  0014_code_refs.py  0016_hnsw_indexes.py  (+13 more)
backend/app/: config.py  db.py  embeddings.py  errors.py  main.py  mcp_server.py  migrate.py  observability.py  seed.py  version.py
backend/tests/: conftest.py  test_admin_console.py  test_admin_isolation.py  test_api.py  test_auth_hardening.py  test_auth_revocation.py  test_authz.py  test_claiming.py  test_clustering.py  test_code_graph.py  test_cross_tenant.py  test_deploy_readiness.py  test_docs_sync.py  test_drive_sync.py  test_events.py  test_fidelity.py  test_grill_decisions.py  test_grill_mode.py  test_isolation.py  test_llm_resilience.py  test_mcp_errors.py  test_mcp_footprint.py  test_org_gating.py  test_org_isolation.py  test_orgs.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_platform_plane.py  test_prd_coverage.py  test_prd_sections.py  test_prd_tools.py  test_prioritization.py  test_providers.py  test_public_hardening.py  test_public_share.py  test_quotas.py  test_secret_encryption.py  (+2 more)
(+161 files in other folders)
