[project]
name = "agentledger-api"
version = "0.1.0"
description = "AgentLedger backend — linear tracker + agent memory + MCP tools"
license = "LicenseRef-FSL-1.1-Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0.36",
    "pgvector>=0.3.6",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyjwt>=2.10",
    "bcrypt>=4.2",
    "python-multipart>=0.0.12",
    "email-validator>=2.2",
    "httpx>=0.28",
    "cryptography>=43",
    "redis>=5.2",
]

[project.optional-dependencies]
# Cloud chat/extraction via Claude. Local (Ollama) and stub need no extra deps.
cloud = [
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
